Fixed Jumper Test padding

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ navbar{
 
 .jumbotron p{
 	font-size: 1.2em;	
+	padding-top: 0.5em;
 }
 
 /*Welcome*/
